--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "node index.js",
+    "start": "pm2 start index.js --name cli-chat-server",
     "dev": "nodemon index.js"
   },
   "keywords": [],
